1.10.2 (1.5.3) Update
1.10.2 (1.5.2) was not propely uploaded to GitHub due to conflict
issues. Unfortunately, I do possess any backup of this version.