@@ -1,80 +1,64 @@
 package gaia.entity.monster;
 
-import gaia.GaiaConfig;
 import gaia.entity.EntityAttributes;
-import gaia.entity.EntityMobHostileBase;
+import gaia.entity.EntityMobBase;
+import gaia.entity.ai.EntityAIGaiaAttackOnCollide;
 import gaia.entity.ai.EntityAIGaiaLeapAtTarget;
-import gaia.init.GaiaItems;
-import gaia.init.Sounds;
-import gaia.items.ItemShard;
-import net.minecraft.block.Block;
-import net.minecraft.enchantment.Enchantment;
+import gaia.init.GaiaItem;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.IEntityLivingData;
 import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.ai.EntityAIAttackMelee;
 import net.minecraft.entity.ai.EntityAIHurtByTarget;
 import net.minecraft.entity.ai.EntityAILookIdle;
+import net.minecraft.entity.ai.EntityAINearestAttackableTarget;
 import net.minecraft.entity.ai.EntityAISwimming;
 import net.minecraft.entity.ai.EntityAIWander;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.init.MobEffects;
-import net.minecraft.init.SoundEvents;
-import net.minecraft.inventory.EntityEquipmentSlot;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
-import net.minecraft.network.datasync.DataParameter;
-import net.minecraft.network.datasync.DataSerializers;
-import net.minecraft.network.datasync.EntityDataManager;
+import net.minecraft.pathfinding.PathNavigateGround;
+import net.minecraft.potion.Potion;
 import net.minecraft.potion.PotionEffect;
 import net.minecraft.util.DamageSource;
-import net.minecraft.util.SoundEvent;
-import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.MathHelper;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.EnumDifficulty;
 import net.minecraft.world.World;
 
-public class EntityGaiaWerecat extends EntityMobHostileBase {
+public class EntityGaiaWerecat extends EntityMobBase {
 
 	public EntityGaiaWerecat(World par1World) {
 		super(par1World);
 		this.experienceValue = EntityAttributes.experienceValue1;
 		this.stepHeight = 1.0F;
+		((PathNavigateGround)this.getNavigator()).setAvoidsWater(true);
 		this.tasks.addTask(0, new EntityAISwimming(this));
 		this.tasks.addTask(1, new EntityAIGaiaLeapAtTarget(this, 0.4F));
-		this.tasks.addTask(2, new EntityGaiaWerecat.AILeapAttack(this));
+		this.tasks.addTask(2, new EntityAIGaiaAttackOnCollide(this, 1.0D, true));
 		this.tasks.addTask(3, new EntityAIWander(this, 1.0D));
 		this.tasks.addTask(4, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
 		this.tasks.addTask(4, new EntityAILookIdle(this));
 		this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false));
+		this.targetTasks.addTask(2, new EntityAINearestAttackableTarget(this, EntityPlayer.class, true));
 	}
 
 	protected void applyEntityAttributes() {
 		super.applyEntityAttributes();
-		this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue((double)EntityAttributes.maxHealth1);
-		this.getEntityAttribute(SharedMonsterAttributes.FOLLOW_RANGE).setBaseValue(EntityAttributes.followrange);
-		this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(EntityAttributes.moveSpeed1);
-		this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue((double)EntityAttributes.attackDamage1);
-        this.getEntityAttribute(SharedMonsterAttributes.ARMOR).setBaseValue(EntityAttributes.rateArmor1);
-	}
-	
-	public boolean attackEntityFrom(DamageSource source, float damage) {
-		if (damage > EntityAttributes.baseDefense1) {
-			damage = EntityAttributes.baseDefense1;
-		}
-		
-		return super.attackEntityFrom(source, damage);
-	}
-	
-    public void knockBack(Entity entityIn, float strenght, double xRatio, double zRatio) {
-		super.knockBack(entityIn, strenght, xRatio, zRatio, EntityAttributes.knockback1);
+		this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue((double)EntityAttributes.maxHealth1);
+		this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue((double)EntityAttributes.moveSpeed1);
+		this.getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue((double)EntityAttributes.attackDamage1);
+		this.getEntityAttribute(SharedMonsterAttributes.followRange).setBaseValue(EntityAttributes.followrange);
 	}
 
-	public boolean attackEntityAsMob(Entity entityIn) {
-		if (super.attackEntityAsMob(entityIn)) {
-			if (entityIn instanceof EntityLivingBase) {
+	public int getTotalArmorValue() {
+		return EntityAttributes.rateArmor1;
+	}
+
+	public boolean attackEntityAsMob(Entity par1Entity) {
+		if (super.attackEntityAsMob(par1Entity)) {
+			if (par1Entity instanceof EntityLivingBase) {
 				byte byte0 = 0;
 
 				if (this.worldObj.getDifficulty() == EnumDifficulty.NORMAL) {
@@ -84,7 +68,7 @@ public class EntityGaiaWerecat extends EntityMobHostileBase {
 				}
 
 				if (byte0 > 0) {
-					((EntityLivingBase)entityIn).addPotionEffect(new PotionEffect(MobEffects.SLOWNESS, byte0 * 20, 0));
+					((EntityLivingBase)par1Entity).addPotionEffect(new PotionEffect(Potion.moveSlowdown.id, byte0 * 20, 0));
 				}
 			}
 
@@ -98,94 +82,74 @@ public class EntityGaiaWerecat extends EntityMobHostileBase {
 		return true;
 	}
 
+	public boolean attackEntityFrom(DamageSource ds, float amount) {
+		return super.attackEntityFrom(ds, amount * (float)(ds.isProjectile()?2:1));
+	}
+
 	public void onLivingUpdate() {
 		super.onLivingUpdate();
 	}
 
-	protected SoundEvent getAmbientSound() {
-		return Sounds.aggressive_say;
+	protected String getLivingSound() {
+		return "grimoireofgaia:aggressive_say";
 	}
 
-	protected SoundEvent getHurtSound() {
-		return Sounds.aggressive_hurt;
+	protected String getHurtSound() {
+		return "grimoireofgaia:aggressive_hurt";
 	}
 
-	protected SoundEvent getDeathSound() {
-		return Sounds.aggressive_death;
+	protected String getDeathSound() {
+		return "grimoireofgaia:aggressive_death";
 	}
 
-	protected void playStepSound(BlockPos pos, Block blockIn) {	
-		this.playSound(SoundEvents.ENTITY_WOLF_STEP, 0.15F, 1.0F);
+	protected void playStepSound(int par1, int par2, int par3, int par4) {
+		this.playSound("mob.wolf.step", 0.15F, 1.0F);
 	}
 
 	protected void dropFewItems(boolean par1, int par2) {
 		if (par1 && (this.rand.nextInt(2) == 0 || this.rand.nextInt(1 + par2) > 0)) {
-			this.dropItem(GaiaItems.FoodMeat, 1);
+			this.dropItem(GaiaItem.FoodMeat, 1);
 		}
 
-		//Nuggets/Fragments
+		//Shards
 		int var11 = this.rand.nextInt(3) + 1;
 
 		for (int var12 = 0; var12 < var11; ++var12) {
-            ItemShard.Drop_Nugget(this,0);
-		}
-		
-		if (GaiaConfig.AdditionalOre == true) {
-			int var13 = this.rand.nextInt(3) + 1;
-
-			for (int var14 = 0; var14 < var13; ++var14) {
-				ItemShard.Drop_Nugget(this,4);
-			}
+            this.entityDropItem(new ItemStack(GaiaItem.Shard, 1, 0), 0.0F);
 		}
 	}
 
-	//Rare
 	protected void addRandomDrop() {
-		switch(this.rand.nextInt(1)) {
+		switch(this.rand.nextInt(2)) {
 		case 0:
-			this.dropItem(GaiaItems.BoxIron, 1);
+			this.dropItem(GaiaItem.BoxIron, 1);
+			break;
+		case 1:
+			this.experienceValue = EntityAttributes.experienceValue1 * 5;
 		}
 	}
 
 	@Override
-    protected void dropEquipment(boolean wasRecentlyHit, int lootingModifier) {}
+	protected void dropEquipment(boolean p_82160_1_, int p_82160_2_) {}
 
 	public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, IEntityLivingData livingdata) {
-		livingdata = super.onInitialSpawn(difficulty, livingdata);	
-		
-		if (this.worldObj.rand.nextInt(4) == 0) {
-			this.setTextureType(1);
-		}
-		
-		ItemStack WEAPON_CUSTOM = new ItemStack(GaiaItems.PropWeaponEnchanted, 1);
-		WEAPON_CUSTOM.addEnchantment(Enchantment.getEnchantmentByLocation("knockback"), 1);
-		this.setItemStackToSlot(EntityEquipmentSlot.MAINHAND, WEAPON_CUSTOM);
+		livingdata = super.onInitialSpawn(difficulty, livingdata);
+		this.setCurrentItemOrArmor(0, new ItemStack(GaiaItem.PropWeaponInvisible));	
+		this.setEnchantmentBasedOnDifficulty(difficulty);
 		return livingdata;		
-    }
-	
-	static class AILeapAttack extends EntityAIAttackMelee {
-		public AILeapAttack(EntityGaiaWerecat entity) {
-			super(entity, EntityAttributes.attackSpeed1, true);
-		}
-
-		protected double getAttackReachSqr(EntityLivingBase attackTarget) {
-			return (double)(4.0F + attackTarget.width);
-		}
 	}
 
-	private static final DataParameter<Integer> SKIN = EntityDataManager.<Integer>createKey(EntityGaiaWerecat.class, DataSerializers.VARINT);
-			
 	protected void entityInit() {
 		super.entityInit();
-		this.dataManager.register(SKIN, Integer.valueOf(0));
+		this.dataWatcher.addObject(13, new Byte((byte)0));
 	}
 
 	public int getTextureType() {
-		return ((Integer)this.dataManager.get(SKIN)).intValue();
+		return this.dataWatcher.getWatchableObjectByte(13);
 	}
 
 	public void setTextureType(int par1) {
-		this.dataManager.set(SKIN, Integer.valueOf(par1));
+		this.dataWatcher.updateObject(13, Byte.valueOf((byte)par1));
 	}
 
 	public void readEntityFromNBT(NBTTagCompound par1NBTTagCompound) {
@@ -199,6 +163,10 @@ public class EntityGaiaWerecat extends EntityMobHostileBase {
 	public void writeEntityToNBT(NBTTagCompound par1NBTTagCompound) {
 		super.writeEntityToNBT(par1NBTTagCompound);
 		par1NBTTagCompound.setByte("MobType", (byte)this.getTextureType());
+	}
+
+	public void knockBack(Entity par1Entity, float par2, double par3, double par5) {
+		super.knockBack(par1Entity, par2, par3, par5, EntityAttributes.knockback1);
 	}
 
 	public boolean getCanSpawnHere() {
